--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,9 +1,9 @@
 body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-  }
-  
-  a {
-    text-decoration: none;
-  }
-  
+  margin: 0;
+  font-family: 'Vazirmatn', sans-serif;
+}
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
