--- a/styles/HomePage.module.scss
+++ b/styles/HomePage.module.scss
@@ -1,8 +1,12 @@
-// Block: home
+@import '../styles/variables.scss';
+
 .home {
     &__main {
       padding: 36px;
       text-align: center;
+      display: flex;
+      flex-direction: column;
+      flex-grow: 1; 
     }
   
     &__title {
@@ -17,14 +21,14 @@
   
     &__button {
       padding: 9px 18px;
-      background-color: #007bff;
+      background-color: $color-primary-light;
       color: white;
       border: none;
       border-radius: 4px;
       cursor: pointer;
   
       &:hover {
-        background-color: #0056b3;
+        background-color: $color-primary;
       }
     }
   }
